Tabs: fixed distorted fonts in IE
git-svn-id: http://jqueryjs.googlecode.com/svn/trunk@1569 c715fcbe-d12f-0410-84c4-316a508785bb

--- a/plugins/tabs/tabs.css
+++ b/plugins/tabs/tabs.css
@@ -11,7 +11,7 @@
 }
 
 /* Skin */
- body {
+body, .tabs-container { /* declare background color for container to avoid distorted fonts in IE while fading */
     background: #fff;
 }
 .tabs-nav {
